--- a/src/localization/locales/en.json
+++ b/src/localization/locales/en.json
@@ -1,4 +1,7 @@
 {
+  "loading": "Loading...",
+  "sign in": "Sign in",
+  "sign out": "Sign out",
   "title": "Frontend Template",
   "userCount": "User count: {{count}}"
 }
