--- a/src/localization/locales/ru.json
+++ b/src/localization/locales/ru.json
@@ -1,4 +1,7 @@
 {
+  "loading": "Загрузка...",
+  "sign in": "Войти",
+  "sign out": "Выйти",
   "title": "Темплейт Фронтенда",
   "userCount": "Количество пользователей: {{count}}"
 }
