--- a/src/localization/locales/ru.json
+++ b/src/localization/locales/ru.json
@@ -1,7 +1,13 @@
 {
   "loading": "Загрузка...",
+  "ButtonSend": "Отправить",
+  "TryAgainLater": "Произошла ошибка, попробуйте позже",
   "sign in": "Войти",
   "sign out": "Выйти",
-  "title": "Темплейт Фронтенда",
-  "userCount": "Количество пользователей: {{count}}"
+  "AboutTitle": "О сервисе",
+  "AboutText": "Информация скоро появится. К концу месяца уж точно!",
+  "ApiTitle": "API",
+  "ApiText": "Информация скоро появится. К концу месяца уж точно!",
+  "ContactsTitle": "Контакты",
+  "ContactsText": "Информация скоро появится. К концу месяца уж точно!"
 }
