--- a/src/localization/locales/en.json
+++ b/src/localization/locales/en.json
@@ -1,7 +1,13 @@
 {
   "loading": "Loading...",
+  "ButtonSend": "Send",
+  "TryAgainLater": "There was an error, try again later",
   "sign in": "Sign in",
   "sign out": "Sign out",
-  "title": "Frontend Template",
-  "userCount": "User count: {{count}}"
+  "AboutTitle": "About",
+  "AboutText": "Coming soon...",
+  "ApiTitle": "API",
+  "ApiText": "Coming soon...",
+  "ContactsTitle": "Contacts",
+  "ContactsText": "Coming soon..."
 }
