--- a/src/localization/locales/en.json
+++ b/src/localization/locales/en.json
@@ -1,9 +1,12 @@
 {
-  "loading": "Loading...",
+  "HeaderMain": "Main",
+  "HeaderAbout": "About",
+  "HeaderContacts": "Contacts",
+  "Loading": "Loading...",
   "ButtonSend": "Send",
   "TryAgainLater": "There was an error, try again later",
-  "sign in": "Sign in",
-  "sign out": "Sign out",
+  "Sign in": "Sign in",
+  "Sign out": "Sign out",
   "AboutTitle": "About",
   "AboutText": "Coming soon...",
   "ApiTitle": "API",
