--- a/src/localization/locales/ru.json
+++ b/src/localization/locales/ru.json
@@ -1,9 +1,12 @@
 {
-  "loading": "Загрузка...",
+  "HeaderMain": "Главная",
+  "HeaderAbout": "О сайте",
+  "HeaderContacts": "Контакты",
+  "Loading": "Загрузка...",
   "ButtonSend": "Отправить",
   "TryAgainLater": "Произошла ошибка, попробуйте позже",
-  "sign in": "Войти",
-  "sign out": "Выйти",
+  "Sign in": "Войти",
+  "Sign out": "Выйти",
   "AboutTitle": "О сервисе",
   "AboutText": "Информация скоро появится. К концу месяца уж точно!",
   "ApiTitle": "API",
